# Document_scanning

./: CMakeLists.txt  main.cpp
src/: DocumentScanner.cpp  DocumentScanner.hpp
